# file-to-memorize

./: README.md  __main__.py  create.py  pdf_to_txt.toml  pyproject.toml
src/: create.py  parse.py  retrieve.py  txt_files.py
