[tool.poetry]
name = "file-to-memorize"
version = "0.1.0"
description = "suite of tools for making files easy to memeorize"
authors = ["NickTooth96 <nicktoothaker@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
